Fixed code alignment and Shell/Curl tab

--- a/slate/source/stylesheets/custom.scss
+++ b/slate/source/stylesheets/custom.scss
@@ -734,3 +734,6 @@ span.opt {
 .tocify{
   margin-top:30px;
 }
+.content>h1, .content>h2, .content>h3{
+  clear:both;
+}
